--- a/source/_posts/Angular相关/[20140917]Angular：如何编写一个指令.md
+++ b/source/_posts/Angular相关/[20140917]Angular：如何编写一个指令.md
@@ -1,3 +1,8 @@
+---
+title: Angular：如何编写一个指令
+date: 2015/3/13 11:24:39
+---
+
 ## Angular是什么？
 AngularJS是一个用JavaScript编写的客户端MVC框架，它运行于Web浏览器，能够极大的帮助我们（开发者）编写模块化，单页面，Ajax风格的Web Applications。
 
