--- a/React面面观/【译】高级指南-不受控组件.md
+++ b/React面面观/【译】高级指南-不受控组件.md
@@ -46,7 +46,7 @@ class NameForm extends React.Component {
 
 ### 默认值
 
-在React的生命周期中，表单元素上的 `value` 属性将会覆盖DOM上的值。在不受控组件汇总，你通常想要在React中指定初始值，但不再控制后续更新。要处理这个场景，你需要使用特定的 `defaultValue` 属性来替代 `value`。
+在React的生命周期中，表单元素上的 `value` 属性将会覆盖DOM上的值。在不受控组件中，你通常想要在React中指定初始值，但不再控制后续更新。要处理这个场景，你需要使用特定的 `defaultValue` 属性来替代 `value`。
 
 ```javascript{7}
 render() {
@@ -65,4 +65,4 @@ render() {
 }
 ```
 
-同样的，`<input type="checkbox">` 和 `<input type="radio">` 支持 `defaultChecked`，`<select>` 和 `<textarea>` 支持 `defaultValue`。
+同样的，`<input type="checkbox">` 和 `<input type="radio">` 中使用 `defaultChecked`，`<select>` 和 `<textarea>` 中使用 `defaultValue`。
