--- a/运维&部署/前端监控系统实现.md
+++ b/运维&部署/前端监控系统实现.md
@@ -28,6 +28,7 @@ screen.colorDepth // 屏幕颜色bit
 
 ```js
 document.referrer // 来源站点
+document.charset || document.characterSet // 字符编码
 ```
 
 ## 1.2、性能信息
@@ -68,14 +69,17 @@ var perfData = {
 var dnsLookupTime = perfData.domainLookupEnd - perfData.domainLookupStart; // DNS解析耗时
 var tcpConnectTime = perfData.connectEnd - perfData.connectEnd; // TCP连接耗时
 var pageLoadTime = perfData.loadEventEnd - perfData.navigationStart; // 页面加载时间，对应 Network 的 Load
-var connectTime = perfData.responseEnd - perfData.requestStart; // 开始请求到结束响应的时间
+var sendRequestTime = pertData.responseStart - perfData.requestStart; // 发送请求耗时
+var serverResponseTime = pertData.responseEnd - perfData.responseStart; // 服务端响应耗时
 var renderTime = perfData.domComplete - perfData.domLoading; // 页面渲染所用的时间
 var domContentLoadedTime = perfData.domContentLoadedEventEnd - perfData.navigationStart;// 页面内容加载时间，对应 Network 的 DOMContentLoaded
-var onloadTime = perfData.loadEventEnd - perfData.navigationStart; // 页面加载时间
-var resolveDomTreeTime = perfData.domComplete = perfData.domInteractive; // 解析DOM树耗时
-
+var resolveDomTreeTime = perfData.domComplete - perfData.domInteractive; // 解析DOM树耗时
+var whiteScreenTime = perfData.domLoading - perfData.navigationStart; // 白屏时间
 ```
 
 # 2、异常信息收集
+
+对于异常来说，我们一般会提供自动异常收集，也需要允许主动上报异常。
+
 
 
