update react native cookbook chapter 1

--- a/React Native Cookbook/章节一.md
+++ b/React Native Cookbook/章节一.md
@@ -28,3 +28,19 @@ $ react-native run-ios # 启动iOS开发环境（要求Mac OS）
 ```
 
 ## 为文本和容器添加样式
+
+我们有若干组件可供使用，但其中用来创建布局或其他组件的最常见和有用的组件则是容器组件和文本年组建。在这个小节中，我们将学习如何使用容器组件和文本组件，更最重要的是，我们将看到样式是如何在React Native中的工作的。
+
+我们将尝试创建一个简单的音乐播放器界面；暂时，我们先不使用图标，后续我们再来添加图标。
+
+### 前提
+
+请按照介绍中的步骤进行操作，以创建一个名为 `ContainersText` 的应用程序。
+
+### 接下来的操作
+
+1. 在项目根目录下创建 `src` 目录，用来放置我们的 `JavaScript` 代码。
+2. 在 `src` 目录中，创建 `MainApp.js` 文件。
+3. 
+
+
